--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
+{% load static %}
 <!dOcTyPe hTmL>
 <html lang="en">
   <head>
   </head>
   <body>
-    {% load static %}
-    <h1>EEE</h1>
+    <div id="app"></div>
     <script src="{% static 'index.js' %}"></script>
   </body>
 </html>
