Got sass working.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!dOcTyPe hTmL>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
   </head>
   <body>
     <div id="app"></div>
