--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,6 +65,18 @@ h1 {
 }
 
 .tilly-detail {
+  .detail-header {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  h2 {
+  }
+  h3 {
+  }
+  p {
+  }
   img {
     width: 100%;
   }
