--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,10 +16,28 @@ h1, h2, h3, h4, h5 {
   overflow: hidden;
 }
 
+header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: baseline;
+  h3 {
+    a {
+      color: black;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
 h1 {
   font-size: 4em;
   margin: 0.5em 0em;
 }
+
+
 
 .listy {
   display: flex;
