--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,12 @@ body {
   padding: 0;
 }
 
+@media only screen and (min-device-pixel-ratio: 2) {
+  body {
+    font-size: 32px;
+  }
+}
+
 h1, h2, h3, h4, h5 {
   font-weight: 400;
 }
