--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -126,10 +126,10 @@ h1 {
     align-items: baseline;
   }
   h2 {
-    font-size: 2em;
   }
   h3 {
-    font-size: 1.5em;
+  }
+  p {
   }
   img {
     width: 100%;
