--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -107,10 +107,10 @@ h1 {
             transform: translate(-50%,-50%);
     //-webkit-filter: grayscale(100%);
             //filter: grayscale(100%);
-    &.portrait {
-      width: 100%;
-      height: auto;
-    }
+    //&.portrait {
+      //width: 100%;
+      //height: auto;
+    //}
     &:hover {
       //-webkit-filter: none;
               //filter: none;
