--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,7 +14,7 @@ $mq-xlarge: "(min-width: #{$bp-xlarge})";
 $mq-xxlarge: "(min-width: #{$bp-xxlarge})";
 $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 // Font-Size
-$base-font-size: 1rem;
+$base-font-size: 1em;
 // Line-Height
 $base-line-height: 1.5;
 $header-line-height: 1.25;
@@ -69,7 +69,7 @@ header {
 }
 
 h1 {
-  font-size: 4rem;
+  //font-size: 4rem;
   margin: 0.5rem 0rem;
 }
 
