--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -69,8 +69,8 @@ header {
 }
 
 h1 {
-  //font-size: 4rem;
-  margin: 0.5rem 0rem;
+  //font-size: 4em;
+  margin: 0.5em 0em;
 }
 
 
@@ -86,8 +86,8 @@ h1 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    margin: 0.5rem 0 0 0;
-    padding: 0.625rem 1rem 0.375rem 1rem;
+    margin: 0.5em 0 0 0;
+    padding: 0.625em 1em 0.375em 1em;
     color: white;
     background: rgba(0,0,0,0.4);
   }
@@ -120,7 +120,7 @@ h1 {
     align-items: baseline;
   }
   .img-wrap {
-    width: 60rem;
+    width: 60em;
     img {
       width: 100%;
     }
@@ -128,58 +128,58 @@ h1 {
 }
 
 .thumbnail {
-  width: 15rem;
-  height: 15rem;
+  width: 15em;
+  height: 15em;
 }
 
 @media all and (min-width: 961px) {
   .everything {
-    width: 60rem;
+    width: 60em;
   }
   //.thumbnail {
-    //width: 15rem;
-    //height: 15rem;
+    //width: 15em;
+    //height: 15em;
   //}
 }
 
 /*
 @media all and (min-width: 721px) and (max-width: 960px) {
   .everything {
-    width: 45rem;
+    width: 45em;
   }
   //.thumbnail {
-    //width: 15rem;
-    //height: 15rem;
+    //width: 15em;
+    //height: 15em;
   //}
 }
 
 @media all and (min-width: 641px) and (max-width: 720px) {
   .everything {
-    width: 36rem;
+    width: 36em;
   }
   //.thumbnail {
-    //width: 12rem;
-    //height: 12rem;
+    //width: 12em;
+    //height: 12em;
   //}
 }
 
 @media all and (min-width: 481px) and (max-width: 640px) {
   .everything {
-    width: 30rem;
+    width: 30em;
   }
   //.thumbnail {
-    //width: 15rem;
-    //height: 15rem;
+    //width: 15em;
+    //height: 15em;
   //}
 }
 
 @media all and (min-width: 321px) and (max-width: 480px) {
   .everything {
-    width: 20rem;
+    width: 20em;
   }
   //.thumbnail {
-    //width: 10rem;
-    //height: 10rem;
+    //width: 10em;
+    //height: 10em;
   //}
 }
 */
