--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!dOcTyPe hTmL>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
   </head>
   <body>
