--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -134,6 +134,39 @@ h1 {
   height: 15em;
 }
 
+article {
+  nav {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: baseline;
+    a {
+      color: black;
+      text-decoration: none;
+      padding-right: 2em;
+      &:hover {
+        text-decoration: underline;
+
+      }
+      &.active {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.back {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  padding: 1.5em;
+  display: block;
+  width: 100%;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+// TODO move this elsewhere and fix it
 @media all and (min-width: 1152px) {
   .everything {
     width: 60em;
