--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -134,19 +134,21 @@ h1 {
   height: 15em;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 article {
   nav {
     display: flex;
     flex-flow: row wrap;
     align-items: baseline;
     a {
-      color: black;
-      text-decoration: none;
       padding-right: 2em;
-      &:hover {
-        text-decoration: underline;
-
-      }
       &.active {
         text-decoration: underline;
       }
